--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
       "version": "0.1.0",
       "private": true,
       "dependencies": {
+            "@coinbase/onchainkit": "^1.1.2",
             "@farcaster/frame-sdk": "^0.0.64",
             "@farcaster/miniapp-sdk": "*",
             "@radix-ui/react-accordion": "^1.2.3",
@@ -51,6 +52,7 @@
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
             "vaul": "^1.1.2",
+            "viem": "^2.40.3",
             "wagmi": "*"
       },
       "devDependencies": {
