--- a/package.json
+++ b/package.json
@@ -63,5 +63,9 @@
       "scripts": {
             "dev": "vite",
             "build": "vite build"
-      }
+      },
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom"
+  }
 }
