--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
       "version": "0.1.0",
       "private": true,
       "dependencies": {
-           "@coinbase/onchainkit": "latest",
+           "@coinbase/onchainkit": "^3.1.0",
             "@farcaster/frame-sdk": "^0.0.64",
             "@farcaster/miniapp-sdk": "*",
             "@radix-ui/react-accordion": "^1.2.3",
