--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
       "version": "0.1.0",
       "private": true,
       "dependencies": {
-           "@coinbase/onchainkit": "^3.1.0",
+            "@coinbase/onchainkit": "0.35.0",
             "@farcaster/frame-sdk": "^0.0.64",
             "@farcaster/miniapp-sdk": "*",
             "@radix-ui/react-accordion": "^1.2.3",
@@ -32,6 +32,7 @@
             "@radix-ui/react-toggle": "^1.1.2",
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
+            "@tanstack/react-query": "^5.90.11",
             "@vercel/node": "*",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
@@ -52,8 +53,8 @@
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
             "vaul": "^1.1.2",
-            "viem": "^2.40.3",
-            "wagmi": "*"
+            "viem": "2.21.7",
+            "wagmi": "2.12.33"
       },
       "devDependencies": {
             "@types/node": "^20.10.0",
@@ -64,8 +65,8 @@
             "dev": "vite",
             "build": "vite build"
       },
-  "overrides": {
-    "react": "$react",
-    "react-dom": "$react-dom"
-  }
+      "overrides": {
+            "react": "$react",
+            "react-dom": "$react-dom"
+      }
 }
